--- a/src/stylesheets/smartphone.css
+++ b/src/stylesheets/smartphone.css
@@ -204,9 +204,9 @@ header {
     height: 10px;
     font-size: 12px; 
 }
-.nextfloatright {
+/*.nextfloatright {
     width: auto;
-}
+}*/
 .leftfacebook{
     position:absolute;
     margin-top: 15px;
